--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,10 @@
 {
   "hosting": {
-    "public": "public",
+    "public": ".",    // <-- root folder
     "ignore": [
       "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      { "source": "**", "destination": "/index.html" }
+      ".github/**",
+      "**/.*"
     ]
   }
 }
